# openfx-CMS

./: .gitignore  CMakeLists.txt  Info.plist  Readme.md  debayer_ppg.cl  utils.h
CMSBakeLut/: CMSBakeLut.cpp  CMSBakeLut.h  ofxTestLog.txt
CMSColorConversion/: CMSColorConversion.cpp  CMSColorConversion.h
CMSLogEncoding/: CMSLogEncoding.cpp  CMSLogEncoding.h
CMSMLVReader/: CMSMLVReader.cpp  CMSMLVReader.h  ofxTestLog.txt
CMSPattern/: CMSPattern.cpp  CMSPattern.h  ofxTestLog.txt
CMSVectorScope/: CMSVectorScope.cpp  CMSVectorScope.h
MLVReader/: MLVReader.cpp  MLVReader.h  mathutils.h  ofxTestLog.txt
OpenCLBase/: OpenCLBase.cpp  OpenCLBase.h
RawLib/: CMakeLists.txt  dng_convert.cpp  dng_convert.h  mlv_video.cpp  mlv_video.h  ofxTestLog.txt
RawLib/color_aberration/: ColorAberrationCorrection.c  ColorAberrationCorrection.h
RawLib/idt/: color_data.h  define.h  dng_idt.cpp  dng_idt.h  mathOps.h  spectral_idt.cpp  spectral_idt.h
RawLib/lensid/: lens_id.cpp  lens_id.h
RawLib/mlv-lib/: CMakeLists.txt  audio_mlv.c  audio_mlv.h  macros.h  mlv_object.h  raw.h  video_mlv.c  video_mlv.h
RawLib/mlv-lib/camid/: camera_id.c
RawLib/mlv-lib/dng/: dng.c  dng.h
RawLib/mlv-lib/liblj92/: lj92.c
RawLib/mlv-lib/llrawproc/: darkframe.c  darkframe.h  dualiso.c  dualiso.h  hist.c  llrawproc.c  llrawproc.h  llrawproc_object.h  opt_med.h  patternnoise.c  pixelproc.c  stripes.c
SupportExt/: CMakeLists.txt
cmake/modules/: FindLibRaw.cmake
libs/: CMakeLists.txt
libs/GFX/: font.h  gfx.cpp  gfx.h
libs/ceres/: CMakeLists.txt
libs/ceres/include/ceres/internal/: eigen.h
libs/ceres/internal/ceres/: covariance_impl.cc
libs/libRaw/: CMakeLists.txt
libs/mingw64/libraw/: ReadMe.md
openfx/: CMakeLists.txt
openfx/Documentation/sources/Guide/Code/Example1/: basics.cpp
openfx/Documentation/sources/Guide/Code/Example2/: invert.cpp
openfx/Documentation/sources/Guide/Code/Example3/: gain.cpp
openfx/Documentation/sources/Guide/Code/Example4/: saturation.cpp
openfx/Documentation/sources/Guide/Code/Example5/: circle.cpp
openfx/Examples/Basic/: basic.cpp
openfx/Examples/Custom/: custom.cpp
openfx/Examples/DepthConverter/: depthConverter.cpp
openfx/Examples/Invert/: invert.cpp
openfx/Examples/OpenGL/: opengl.cpp
openfx/Examples/Overlay/: overlay.cpp
openfx/Examples/Rectangle/: rectangle.cpp
openfx/Examples/Test/: testProperties.cpp
openfx/HostSupport/HostSupport.xcodeproj/: project.pbxproj
openfx/HostSupport/include/: ofxhBinary.h  ofxhPlatformDefines.h  ofxhUtilities.h
openfx/HostSupport/src/: ofxhImageEffect.cpp  ofxhUtilities.cpp
openfx/Support/include/: ofxsImageEffect.h
resources/data/camera/: canon_eos_m_380_780_5.json
resources/opencl/: debayer_ppg.cl  debayer_vng.cl  imgutils.cl
scripts/: interpolate_spts.py
utils/: mathutils.h  utils.h
