ADD_SUBDIRECTORY(mlv-lib)

FILE(GLOB MLV_SOURCES_CPP *.cpp)
FILE(GLOB LENSID_SOURCES lensid/lens_id.cpp)

ADD_LIBRARY(rawlib_static OBJECT ${LENSID_SOURCES} ${MLV_SOURCES_CPP} ${IDT_SOURCES} )
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR} ${LibRaw_INCLUDE_DIR})
TARGET_INCLUDE_DIRECTORIES(rawlib_static PUBLIC . ../utils mlv-lib lensid)