FILE(GLOB MLV_SOURCES video_mlv.c audio_mlv.c)
FILE(GLOB LJ92_SOURCES liblj92/lj92.c)
FILE(GLOB CAMID_SOURCES camid/camera_id.c)
FILE(GLOB DNG_SOURCES dng/dng.c)
FILE(GLOB LLRAW_SOURCES llrawproc/*.c)

if(NOT ${CMAKE_BUILD_TYPE} STREQUAL "Debug")
ADD_COMPILE_DEFINITIONS(-DSTDOUT_SILENT)
endif()

# Disable OpenMP - Use Natron's thread management instead
ADD_COMPILE_OPTIONS(-pthread -w -Ofast -fopenmp)
ADD_LIBRARY(mlvlib_static OBJECT ${MLV_SOURCES} ${MLV_HEADERS} ${LJ92_SOURCES} ${CAMID_SOURCES} ${DNG_SOURCES} ${LLRAW_SOURCES})
INCLUDE_DIRECTORIES(${EIGEN3_INCLUDE_DIR} ${LibRaw_INCLUDE_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/liblj92 ${CMAKE_CURRENT_SOURCE_DIR}/camid ${CMAKE_CURRENT_SOURCE_DIR}/dng ${CMAKE_CURRENT_SOURCE_DIR}/llrawproc)
TARGET_INCLUDE_DIRECTORIES(mlvlib_static PUBLIC ./)